--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body></body>
+  <head>
+    <title>Assignment 2 Song Details</title>
+  </head>
+  <body>
+    <div>
+      <h1>Respectless</h1>
+      <h3>&copy; </h3>
+    <div style="background:red">
+    <p style="background-color:lightblue">
+      You better show some respect
+    </p>
+    <img src="https://www.shareicon.net/data/128x128/2016/04/02/743522_music_512x512.png">
+    <p style="background-color:lightblue">
+      Check your behavior
+    </p>
+    <hr />
+    <br />
+  </div>
+</div>
+  </body>
 </html>
